# Sound-Clash

./: .env.example  .env.local  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  ADMIN_AUTHENTICATION.md  ADMIN_INTERFACE_GUIDE.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  COST_OPTIMIZATION.md  DEPLOY_NOW.md  DEPLOY_PRODUCTION.md  LICENSE  PHASE_1_QUICK_REF.md  PHASE_1_QUICK_START.md  PHASE_1_SUMMARY.md  PHASE_1_TESTING_GUIDE.md  PHASE_2_QUICK_START.md  PHASE_2_SUMMARY.md  PHASE_2_TESTING_GUIDE.md  PLAYTEST_FINDINGS.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  TASK_2.3_README.md  TASK_2.3_WAITING_ROOM_PLAN.md  create-game.ps1  docker-compose.dev.yml  docker-compose.yml  mm,ss_converter.py  package-lock.json  package.json  register-game.ps1  songs_simple.csv
.claude/: settings.local.json
backend/: .env.example  Dockerfile  README.md  env.example  pyproject.toml
backend/app/: __init__.py  config.py  constants.py  main.py
backend/app/db/: __init__.py  errors.py  supabase_client.py
backend/app/middleware/: admin_auth.py  cors.py  error_handler.py  manager_auth.py  otel.py  rate_limit.py  sentry.py
backend/app/models/: errors.py  games.py  genres.py  songs.py
backend/app/routers/: admin_songs.py  games.py  genres.py  health.py
backend/app/services/: __init__.py  codes.py  csv_import.py  scoring.py  song_picker.py  youtube_availability.py
backend/game-api/: README.md
backend/game-management/: .dockerignore  Dockerfile  README.md  __init__.py  main.py  main_simple.py  requirements.txt  websocket_integration.py
backend/game-management/api/: games.py  genres.py  health.py
backend/game-management/database/: __init__.py  config.py  dynamodb.py  init.py  models.py  postgres.py  redis.py  seed_data.py  service.py
backend/game-management/models/: game.py  song.py  team.py
backend/game-management/services/: game_service.py  youtube_heatmap_service.py
backend/manager-console/: README.md
backend/public-display/: README.md
backend/scripts/: import_songs_csv.py  migrate.py  run_migration.sh
backend/shared/: requirements.txt
backend/shared/database/: connections.py  models.py  seed_data.py
backend/shared/models/: __init__.py  base.py  enhanced_song.py  game_models.py
backend/shared/utils/: helpers.py
backend/song-management/: .env.example  Dockerfile  main.py  requirements.txt
backend/song-management/api/: health.py  songs.py
backend/song-management/database/: postgres.py
backend/song-management/models/: song_models.py
backend/song-management/scripts/: GET_RDS_CREDENTIALS.md  PHASE1_SUMMARY.md  QUICKSTART.md  README_PHASE1.md  check_schema.py  load_songs.py  setup_phase1.ps1
backend/websocket-service/: Dockerfile  Dockerfile_simple  README.md  cleanup.sh  main.py  main_complete.py  main_simple.py  requirements.txt  requirements_simple.txt
backend/websocket-service/handlers/: __init__.py  connection_manager.py  team_handler.py
backend/websocket-service/models/: __init__.py  game_state.py  team_models.py
(+581 files in other folders)
