[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sound-clash-backend"
version = "0.0.0"
description = "Sound Clash FastAPI backend"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ben Artzi", email = "benartzi4@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "supabase>=2.9",
    "pydantic>=2.9",
    "python-multipart>=0.0.18",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.18",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.8",
    "asyncpg>=0.29",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["../tests/backend", "../tests/db"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-p", "no:randomly",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: tests that take >1s; excluded from quick local runs",
    "stress: stress tests (e.g., race tests run 100x); label-gated in CI",
    "needs_docker: tests that require Docker (testcontainers)",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/main.py",  # bootstrap; covered indirectly
    "*/conftest.py",
]

[tool.coverage.report]
# Ratcheted at the end of Phase 4: see docs/testing-strategy.md §5.
fail_under = 90
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "S101",  # assert in tests is fine (we use pytest)
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]  # asserts and hardcoded test passwords are fine
"app/main.py" = ["S104"]  # 0.0.0.0 bind is intentional in containers

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true  # supabase-py et al lack stubs

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # tests can be looser
